Release history for bevelbar

v17.09  2017-09-16
  [LICENSING]
  - The project has been relicensed under the MIT license (more
    precisely called "Expat License", but everyone calls it "MIT
    license" these days).

v16.11  2016-11-13
  [Fixed]
  - When reading input from STDIN, we now limit the buffer to about 64k.
    Previously, it was unlimited, meaning faulty scripts could make
    bevelbar eat all your memory.

  [Added]
  - Validate magic number of farbfeld images as a quick sanity check.

v16.08  2016-08-20
  [Added]
  - Support for displaying farbfeld images.

  [Changed]
  - Command line arguments have been reworked. They now all have default
    values and can be set using getopt. This definitely is backwards
    incompatible.

v16.06  2016-06-26
  [Changed]
  - Try to detect duplicated/cloned monitors.

v16.03  2016-03-13
  [Fixed]
  - Overlong bars no longer appear partially on the wrong monitor.

  [Changed]
  - "Inter segment spacing" is now "segment margin": Around a segment,
    there is both a horizontal and a vertical margin.
  - Both the size of the (new) segment margin and the size of empty
    segments are now measured in pixels (instead of depending on the
    font size).

v16.02  2016-02-01
  [Added]
  - Initial release.
  - Draw bars.
  - Manpage.